# Advanced-Topics-in-Neural-Networks-Template-2023

./: .gitignore  .gitmodules  LICENSE  README.md  Tema3_RN_Brezuleanu.ipynb  Untitled1.ipynb  carn_lab3.ipynb  et --hard HEAD~1  requirements.txt
Lab01/: Assignment1.py  Homework.ipynb  Homework.py  LogisticRegression.ipynb  LogisticRegression_solved.ipynb  README.md  assignment.py  bais1.txt  classifier.py  lab1.py  main.py  revisiting.py  weights1.txt
Lab01Hw/: multiclass_logistic_regression.py  requirements.txt
Lab02/: ATNN_Lab2.ipynb  Apostu_Daniel_main.py  Assignment2.py  Exercices.ipynb  Exercise1.py  Exercise_at_Lab.py  Homework2.ipynb  HomeworkLab2.ipynb  Lab02.py  Lab2-ATNN-PostolacheAmalia.ipynb  Lab2-Assig.ipynb  Lab2-Extra.ipynb  Perceptron.ipynb  PerceptronHomework.py  README.md  README_HOMEWORK.md  TRAINING_REPORT.md  Tema - Perceptron.ipynb  Tema2RN.ipynb  TensorOperations.ipynb  TensorOperations_solved.ipynb  assignment2_marcian.ipynb  b_best.pt  homework.py  hw.ipynb  hw.py  l2.py  lab2.ipynb  lab2_assig.py  lab2_assignment.ipynb  lab2_extra.ipynb  lab2_extra.py  lab_2.ipynb  lab_exercise.py  main.py  parser.py  perceptron_training.py  solution.py  tema2.py  w_best.pt
Lab02Hw/: main.py  perceptron.py  perceptron_layer.py  requirements.txt
Lab03/: ATNN_Lab3.ipynb  Apostu_Daniel_main.py  Homework3  Homework3.ipynb  HomeworkLab3.ipynb  Lab03.ipynb  Lab3-ATNN-PostolacheAmalia (1).ipynb  Lab3-ATNN-PostolacheAmalia.ipynb  LabExercises.ipynb  MultiLayerPerceptron.ipynb  lab.py  (+13 more)
projects/MLops/Docker_deploy/cpp/example-app/: CMakeLists.txt  inference.cpp
(+8879 files in other folders)
